# CSNETWK_MP

./: .gitignore  CSNETWK MP Rubric.txt  CSNETWK_ MP RFC.txt  README.md  file.txt  pyproject.toml
src/lsnp/: __init__.py  avatar_utils.py  cli.py  config.py  messages.py  node.py  state.py  tictactoe.py  transport.py
tests/: test_like_and_validity.py  test_listing.py  test_messages.py
